--- a/TicketTrackingSystem.Application/TicketTrackingSystem.Application.csproj
+++ b/TicketTrackingSystem.Application/TicketTrackingSystem.Application.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+    <PackageReference Include="Hangfire" Version="1.8.17" />
   </ItemGroup>
 
   <ItemGroup>
