Refactor services and update TicketHistory model
Refactored `GetAllTicketHistoryForReportAsync` in `TicketHistoryService` for better query efficiency and readability. Updated `TicketHistoryReportDto` to remove default values. Enhanced `TicketService` to add new `TicketHistory` records, introduced `ActionName` property, and improved handling of `EstimatedCompletionDate` and `DeliveryStatus`. Updated `UserService` to check `TicketHistory` records by `UserId` and `AssignedToId`. Added `Children` collection and `ActionName` property to `TicketHistory`. Modified `TicketHistoryRepository` to delete all history records for a user.

Updated `SetLateTicketsAsync` in `TicketRepository.cs` to filter `TicketHistories` by `HistoryType.Assignment`. Changed `TicketHistory` relationship in `TicketTrackingSystemDbContext.cs` to one-to-many. Updated `TicketTrackingSystemDbContextModelSnapshot.cs` to reflect these changes and added new `ActionName` column. Added new entries in `bundleconfig.json` for `site.css` and `projectTable.js`. Modified `dataFilter` function in `dataTableUtility.js` and `gatherFormData` function in `editMemberTicket.js`. Added new `ActionName` enumeration. Created migration `20250122085601_ChangeHistory.cs` to update `TicketHistory` table and seed data.

--- a/TicketTrackingSystem.MVC/bundleconfig.json
+++ b/TicketTrackingSystem.MVC/bundleconfig.json
@@ -4,5 +4,17 @@
     "inputFiles": [
       "wwwroot/js/bottomScript.js"
     ]
+  },
+  {
+    "outputFileName": "wwwroot/css/site.min.css",
+    "inputFiles": [
+      "wwwroot/css/site.css"
+    ]
+  },
+  {
+    "outputFileName": "wwwroot/view/project/projectTable.min.js",
+    "inputFiles": [
+      "wwwroot/view/project/projectTable.js"
+    ]
   }
 ]
