Enhance ticket history tracking and UI improvements
- Updated `TicketHistoryService` to improve filtering and querying in `GetAllTicketHistoryForReportAsync`, including pagination and search enhancements.
- Added `CycleNumber` property to `TicketHistory` records for better tracking of ticket stages.
- Updated `TicketTrackingSystemDbContextModelSnapshot` to reflect the new `CycleNumber` column in the database schema.
- Enhanced Razor views with improved styling and layout for a modern look, including dark mode support.
- Updated `bundleconfig.json` to include new CSS for UserUI styles.
- Modified JavaScript files to improve button styles and functionalities, including asynchronous data handling in `reportTable.js`.

--- a/TicketTrackingSystem.MVC/bundleconfig.json
+++ b/TicketTrackingSystem.MVC/bundleconfig.json
@@ -16,5 +16,11 @@
     "inputFiles": [
       "wwwroot/view/project/projectTable.js"
     ]
+  },
+  {
+    "outputFileName": "wwwroot/lib/UserUI/css/UserUIStyle.min.css",
+    "inputFiles": [
+      "wwwroot/lib/UserUI/css/UserUIStyle.css"
+    ]
   }
 ]
